syntax = "proto3";
package Jde.App.Proto.FromClient;
import "google/protobuf/timestamp.proto";
import "Common.proto";

message Instance{
	string application=1;
	string host=2;
	uint32 pid=3;
	Jde.Proto.ELogLevel server_log_level=4;
	Jde.Proto.ELogLevel client_log_level=5;
	uint32 start_time=6;
	uint32 web_port=7;
	string instance_name=8;
}

message LogEntry{
	google.protobuf.Timestamp time=1;
	Jde.Proto.ELogLevel level=2;
	uint32 message_id=3;
	uint32 file_id=4;
	uint32 function_id=5;
	uint32 line_number=6;
	uint32 user_id=7;
	uint64 thread_id=8;
	uint64 tags=9;
	repeated string variables=10;
}

enum EFields{
	FieldsNone=0;
	TimestampField=0x1;
	MessageId=0x2;
	MessageField=0x4;
	Level=0x8;
	FileId=0x10;
	File=0x20;
	FunctionId=0x40;
	Function=0x80;
	LineNumber=0x100;
	UserId=0x200;
	User=0x400;
	ThreadId=0x800;
	Thread=0x1000;
	VariableCount=0x2000;
	SessionId=0x4000;
}

message RequestString{
	EFields field=1;
	uint32 id=2;
	string value=3;
}

message Status{
	google.protobuf.Timestamp start_time=1;
	uint64 memory=2;
	Jde.Proto.ELogLevel server_min_log_level=3;
	Jde.Proto.ELogLevel client_min_log_level=4;
	repeated string details=5;
}

message AddSession{
	string domain=2;
	string login_name=3;
	uint32 provider_id=4;
}

message Message{
	uint32 request_id=1;
	oneof Value{
		Instance instance = 2;
		LogEntry log_entry = 3;
		RequestString string = 4;
		Status status = 5;
		bytes custom=6;
		uint32 session_id=8;
		AddSession add_session=9;
		uint32 session_info=10;
		string graph_ql=11;
	}
}

message Transmission{
	repeated Message Messages = 1;
}
